force-app/main/default/objects/OpportunityLineItem/fields/Callout_Standard_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Callout_Standard_Price_Difference__c</fullName>
    <formula>PricebookEntry.Callout_Standard_Price_Difference__c</formula>
    <label>Callout Standard Price Difference</label>
    <type>Checkbox</type>
</CustomField>