force-app/main/default/objects/OpportunityLineItem/fields/Commissionable_Amount_Editable__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Amount_Editable__c</fullName>
    <description>Commission to be paid.  Modified by pricebook entry fee and/or opportunity promotion(s).</description>
    <label>Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>