force-app/main/default/objects/OpportunityLineItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <inlineHelpText>$</inlineHelpText>
    <label>Discounted Dollar Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>