force-app/main/default/objects/OpportunityLineItem/fields/Product_mp__c.field-meta.xml
<CustomField>
    <fullName>Product_mp__c</fullName>
    <description>Do not delete this field, it is created and used by &quot;Easy Pricing for Opportunity&quot; installed package.</description>
    <formula>HYPERLINK(IF(AND(NOT(ISBLANK(Id)), LEN(Id) != 0),(MID($Api.Enterprise_Server_URL_470, 1, FIND(&quot;/services/&quot;,$Api.Enterprise_Server_URL_470)) &amp; Id),&apos;&apos;),IF(AND(NOT(ISBLANK(Id)), LEN(Id) != 0, NOT(ISBLANK(PricebookEntry.Product2.Name)), LEN(PricebookEntry.Product2.Name) != 0), PricebookEntry.Product2.Name,&apos;&apos;),&apos;_parent&apos;)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>