force-app/main/default/objects/OpportunityLineItem/fields/Promotion_Applied__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotion Applied</label>
    <type>Checkbox</type>
</CustomField>